--- a/src/app/components/emision/emision.component.html
+++ b/src/app/components/emision/emision.component.html
@@ -9,7 +9,8 @@
     <p style="left: 550px; top: 555px;">carteras</p>
 </a>
 
-<a href="./"><img src="../../../assets/logo.png" style="position:relative; width: 90px; height: 95px; left: 530px; top: 280px; align-items:center;background: #FFFFFF;
-    box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px"></a>
+<a href="/historial"><img src="../../../assets/logo.png" style="position:relative; width: 90px; height: 95px; left: 530px; top: 280px; align-items:center;background: #FFFFFF;
+    box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
     <p style="left: 1130px">Generar cartera</p>
     <p style="left: 1130px; top: 575px;">de descuento</p>
+</a>
