--- a/src/app/components/historial/historial.component.html
+++ b/src/app/components/historial/historial.component.html
@@ -1,1 +1,4 @@
-<p>historial works!</p>
+<app-navbar></app-navbar>
+<img src="../../../assets/trasfondo2.png" style="position: absolute; top: 92px;  width: 750px; height:927px">
+<p class="primero">Historial de</p>
+<p class="segundo">carteras</p>
