--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -41,7 +41,7 @@ color: #BB5B5B;">Persona Natural</p>
               font-weight: normal;
               font-size: 24px;
               line-height: 28px;
-            
+
               color: #000000; text-align: center" >Regístrate</p>
               <form class="mx-1 mx-md-4" [formGroup]="userForm" (submit)="register()">
 
@@ -50,6 +50,7 @@ color: #BB5B5B;">Persona Natural</p>
                   <div class="flex-fill mb-0">
                     <input type="number" id="num" class="form-control" formControlName="num" placeholder="num">
                     <span *ngIf="userForm.controls['num'].hasError('required') && userForm.controls['num'].touched">Campo requerido</span>
+                    <span *ngIf="userForm.controls['num'].hasError('minlength') && userForm.controls['num'].touched">Documento inválido</span>
                   </div>
                 </div>
 
