--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -11,3 +11,47 @@
     box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
     <p style="left: 1130px">Dólares</p>
 </a>
+
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+<!-- <app-navbar></app-navbar>
+<div>
+  <div class="row">
+    <div class="col-8">
+      <div class="row" style="height: 60vh">
+        <div class="col"></div>
+        <div class="col-6" style="background: white; border: 50px solid white">
+          <div class="d-flex justify-content-center">
+            <img src="../../../assets/logo.png" height="60" style="background: #FFFFFF; box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
+          </div>
+          <br>
+          <div>
+            <label style="font-size: 2vw">Soles</label>
+          </div>
+          <br>
+          
+        </div>
+        <div class="col"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-8">
+      <div class="row" style="height: 60vh">
+        <div class="col"></div>
+        <div class="col-6" style="background: white; border: 50px solid white">
+          <div class="d-flex justify-content-center">
+            <img src="../../../assets/logo.png" height="60" style="background: #FFFFFF; box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
+          </div>
+          <br>
+          <div>
+            <label style="font-size: 2vw">Dólares</label>
+          </div>
+          <br>
+          
+        </div>
+        <div class="col"></div>
+      </div>
+    </div>
+  </div>
+</div>  -->
