--- a/src/app/components/cambiar-password/cambiar-password.component.css
+++ b/src/app/components/cambiar-password/cambiar-password.component.css
@@ -4,13 +4,13 @@
   height: 100vh;
 }
 .header-1{
-  font-family: "Roboto Slab";
+  font-family: Roboto Slab;
   font-size: 5vw;
   color: white;
 }
 
 .header-2{
-  font-family: "Roboto Slab";
+  font-family: Roboto Slab;
   font-size: 4vw;
   color: #BB5B5B;
 }
