--- a/src/app/components/historial/historial.component.html
+++ b/src/app/components/historial/historial.component.html
@@ -27,7 +27,7 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <div class="row">
-                    <div class="col"><i class="fa fa-clipboard"></i></div>
+                    <div class="col-2"><img src="../../../assets/checklist.png" height="30"> </div>
                     <div class="col-8">
                       Cartera {{carteras.id}}
                       <p style="font-size: 2vh">Fecha de descuento: {{carteras.descuento}}</p>
@@ -45,9 +45,3 @@
     </div>
   </div>
 </div>
-<!--
-<div *ngFor="let carteras of listCarteras">
-  <h5>{{carteras.id}}</h5>
-  <p>{{carteras.descuento}}</p>
-</div>
--->
