--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,57 +1,31 @@
 <app-navbar></app-navbar>
-<img src="../../../assets/trasfondo2.png" style="position: absolute; top: 300px; right:500px; width: 350px; height:350px">
-<img src="../../../assets/trasfondo2.png" style="position: absolute; top: 300px; left: 500px; width: 350px; height:350px">
-<a>
-    <img src="../../../assets/logo.png" style="position:relative; width: 90px; height: 95px; right: -1200px; top: 280px;align-items:center;background: #FFFFFF;
-            box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
-    <p style="left: 550px">Soles</p>
-</a>
-
-<a href="/historial"><img src="../../../assets/logo.png" style="position:relative; width: 90px; height: 95px; left: 530px; top: 280px; align-items:center;background: #FFFFFF;
-    box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
-    <p style="left: 1130px">Dólares</p>
-</a>
-
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<!-- <app-navbar></app-navbar>
-<div>
-  <div class="row">
-    <div class="col-8">
-      <div class="row" style="height: 60vh">
-        <div class="col"></div>
-        <div class="col-6" style="background: white; border: 50px solid white">
-          <div class="d-flex justify-content-center">
-            <img src="../../../assets/logo.png" height="60" style="background: #FFFFFF; box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
+<section class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <div class="card text-center mx-auto m-5" style="width: 50%">
+              <div>
+                <img src="../../../assets/nuevossoles.png" class="sombra-2" height="124" alt="">
+              </div>
+              <div class="card-body">
+                <br>
+                <a href="#" class="card-link text-reset">Soles</a>
+              </div>
+            </div>
           </div>
-          <br>
-          <div>
-            <label style="font-size: 2vw">Soles</label>
-          </div>
-          <br>
-          
+  
+        <div class="col">
+            <div class="card text-center mx-auto m-5" style="width: 50%">
+            <div>
+                <img src="../../../assets/dollars.png" class="sombra-2" height="124" alt="">
+            </div>
+            <div class="card-body ">
+                <br>
+                <a href="#" class="card-link text-reset">Dólares</a>
+            </div>
+            </div>
         </div>
-        <div class="col"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-8">
-      <div class="row" style="height: 60vh">
-        <div class="col"></div>
-        <div class="col-6" style="background: white; border: 50px solid white">
-          <div class="d-flex justify-content-center">
-            <img src="../../../assets/logo.png" height="60" style="background: #FFFFFF; box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
-          </div>
-          <br>
-          <div>
-            <label style="font-size: 2vw">Dólares</label>
-          </div>
-          <br>
-          
+        <div >
+            <a class="btn btn-primary" href="/historial" role="button" style="width:100px">Regresar</a>
         </div>
-        <div class="col"></div>
-      </div>
     </div>
-  </div>
-</div>  -->
+  </section>
