--- a/src/app/components/filter/filter.component.css
+++ b/src/app/components/filter/filter.component.css
@@ -1,27 +1,48 @@
-*{
-  box-sizing: border-box;
+
+
+.col .card-body{
+  background: #102D4A;
+  border-radius: 10px;
 }
 
-p{
-    position: absolute;
-    width: 229px;
-    height: 46px;
-    top: 490px;
-
-    font-family: Roboto Slab;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 47px;
-    text-align: center;
-
-    color: #FFFFFF;
+.col .card{
+  background: rgba(255, 255, 255, 0.58);
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;  
 }
 
-img:hover{
-    background-color: #BB5B5B;
+.sombra {
+  box-shadow: rgba(0, 48, 91, 1) 15px 15px;
 }
 
-a{
-  box-sizing: border-box;
+.sombra-2 {
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  border-radius: 100%;
+}
+.box {
+  width: 196px;
+  height: 236px;
+  overflow: hidden;
+  border-width: 0;
+}
+
+.box img{
+  width: 100%;
+  height: auto;
+}
+@supports(object-fit: cover){
+  .box img{
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+  }
+}
+a {
+  text-decoration: none;
+}
+
+.texto {
+  background: linear-gradient(90deg,#1B97B6,#4ECCC6,#B2E5FB);
+  -webkit-background-clip: text;
+  color: transparent;
 }
