Terminar Componente historial

--- a/src/app/components/historial/historial.component.html
+++ b/src/app/components/historial/historial.component.html
@@ -39,6 +39,12 @@
             </div>
           </div>
           <br>
+          <div>
+            <p class="text-end">N° carteras: {{cantidadCarteras}}</p>
+          </div>
+          <div align="center">
+            <button class="btn" style="background-color: #00305B; color: #eeeeee; width: 10vw" (click)="redirect()">Filtrar</button>
+          </div>
         </div>
         <div class="col"></div>
       </div>
