--- a/src/app/components/carterax/carterax.component.html
+++ b/src/app/components/carterax/carterax.component.html
@@ -1,1 +1,2 @@
-<p>carterax works!</p>
+<app-navbar></app-navbar>
+<img src="../../../assets/trasfondo2.png" style="position: absolute; top: 92px;  width: 750px; height:927px">
