--- a/src/app/components/carteragastofinal/carteragastofinal.component.html
+++ b/src/app/components/carteragastofinal/carteragastofinal.component.html
@@ -8,17 +8,10 @@
     <tbody>
     <tr class="col" *ngFor="let el of elements">
       <th scope="row">{{el.id}}</th>
-      <td>{{el.fechaEmision}}</td>
-      <td>{{el.fechaPago}}</td>
-      <td>{{el.monto}}</td>
-      <td>{{el.retencion}}</td>
-      <td>{{el.dias}}</td>
-      <td>{{el.tasaDescuento}}</td>
-      <td>{{el.montoDescuento}}</td>
-      <td>{{el.neto}}</td>
-      <td>{{el.recibido}}</td>
-      <td>{{el.entregado}}</td>
-      <td>{{el.tcea}}</td>
+      <td>{{el.carteraId}}</td>
+      <td>{{el.gastoFinalId}}</td>
+      <td>{{el.formatoId}}</td>
+      <td>{{el.mGastoFinal}}</td>
     </tr>
     </tbody>
   </table>
