--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -34,7 +34,7 @@
 <!-- Presentacion-->
 <section id="1" class="container-fluid">
   <div class="row">
-    <div class="col-5 bg-primary container p-5 pb-0">
+    <div class="col-5 container bg-primary p-5 pb-0">
       <div class="mb-5">
         <h1 class="font-weight-bold text-white">Finanzas e</h1>
         <h1 class="font-weight-bold text-danger">ingeniería</h1>
