Routeo de Cartera X

--- a/src/app/components/carterax/carterax.component.html
+++ b/src/app/components/carterax/carterax.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
 <img src="../../../assets/trasfondo2.png" style="position: absolute; top: 92px;  width: 750px; height:927px">
+<p>carterax works!</p>
+<h1>{{cartera.id}}</h1>
