--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,10 +22,10 @@
         <a class="nav-link" href="#3">Nosotros</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Iniciar Sesión</a>
+        <a class="nav-link" href="/login">Iniciar Sesión</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Registrarse</a>
+        <a class="nav-link" href="/register">Registrarse</a>
       </li>
     </ul>
   </div>
