--- a/src/app/components/tasa/tasa.component.html
+++ b/src/app/components/tasa/tasa.component.html
@@ -16,7 +16,16 @@
                     <option>4</option>
                     <option>5</option>
                 </select>
-            </div>    
+            </div> 
+            <div class="form-group mx-sm-3">
+                <label for="inputUser" class="sr-only">User</label>
+                <input type="password" class="form-control" id="inputUser" placeholder="User">
+            </div>
+            <div class="form-group mx-sm-3">
+                <label for="inputPass" class="sr-only">Password</label>
+                <input type="password" class="form-control" id="inputPass" placeholder="Pass">
+            </div>
+            <button type="submit" class="btn btn-primary">Confirm</button>   
         </form>
     </div>
   </div>
