Actualizar Tasa componente

--- a/src/app/components/tasa/tasa.component.html
+++ b/src/app/components/tasa/tasa.component.html
@@ -12,7 +12,7 @@
           </select>
         </div>
         <div>
-          <select name="Plazo de tasa" formControlName="plazo">
+          <select name="Plazo de Tasa" formControlName="plazo">
             <option value="" selected disabled>Plazo de tasa</option>
             <option value="360">Anual</option>
             <option value="180">Semestral</option>
@@ -28,44 +28,14 @@
           <input type="text" disabled placeholder="Valor">
         </div>
         <div>
-          <select name="" id=""></select>
+          <select name="Tipo de Tasa" formControlName="tasa">
+            <option value="" selected disabled>Tipo de tasa</option>
+            <option value="0">Tasa Efectiva</option>
+            <option value="1">Tasa Nominal</option>
+          </select>
+          <input type="text" disabled placeholder="Valor">
         </div>
       </form>
     </div>
   </div>
 </div>
-<!--
-<div class="card" style="width: 18rem;">
-    <div class="card-body" style="width: 5vw">
-        <h5 class="card-title">Tasa y Plazo</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-
-        <form>
-            <div class="form-group">
-                <label for="exampleFormControlSelect1">Example select</label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                </select>
-<<<<<<< Updated upstream
-            </div> 
-            <div class="form-group mx-sm-3">
-                <label for="inputUser" class="sr-only">User</label>
-                <input type="password" class="form-control" id="inputUser" placeholder="User">
-            </div>
-            <div class="form-group mx-sm-3">
-                <label for="inputPass" class="sr-only">Password</label>
-                <input type="password" class="form-control" id="inputPass" placeholder="Pass">
-            </div>
-            <button type="submit" class="btn btn-primary">Confirm</button>   
-=======
-            </div>
->>>>>>> Stashed changes
-        </form>
-    </div>
-  </div>
--->
