--- a/src/app/components/datos-obtenidos/datos-obtenidos.component.html
+++ b/src/app/components/datos-obtenidos/datos-obtenidos.component.html
@@ -1,8 +1,14 @@
+<app-navbar></app-navbar>
 <div class="row">
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Datos ingresados de la cartera</h5>
+            <div class="letras">
+                <span class="card-title" style="color: #1B97B6; font-size: 24px;">Datos </span> 
+                <span style="color: black; font-size: 24px;"><strong>ingresados</strong></span>
+                <span style="color: #1B97B6; font-size: 24px;"> de la cartera</span>
+            </div>
+          <br>
           <br>
           <p class="card-text">Fecha de Descuento</p>
           <p></p>
@@ -31,30 +37,32 @@
       </div>
     </div>
     <div class="col-sm-6">
-      <div class="card">
+      <div class="card" style="height: 450px;">
         <div class="card-body">
-          <h5 class="card-title">Datos obtenidos</h5>
+            <div class="letras">
+                <span class="card-title" style="color: #1B97B6;font-size: 24px;">Datos </span> 
+                <span style="color: black;font-size: 24px;"> <strong>obtenidos</strong> </span>            </div>
+          <br>
           <br>
           <p class="card-text">Costos iniciales totales</p>
-          <p></p>
+          <p class="r"></p>
           <br>
           <p class="card-text">Costos finales totales</p>
-          <p></p>
+          <p class="r"></p>
           <br>
           <p class="card-text">Número de recibos agregados</p>
-          <p></p>
+          <p class="r"></p>
           <br>
           <p class="card-text">Valor Total a recibir</p>
-          <p></p>
+          <p class="r"></p>
           <br>
           <p class="card-text">Tasa de Coste Efectiva Anual</p>
-          <p></p>
+          <p class="r"></p>
         </div>
       </div>
     </div>
 </div>
-<div class="btn-group" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-secondary">Left</button>
-    <button type="button" class="btn btn-secondary">Middle</button>
-    <button type="button" class="btn btn-secondary">Right</button>
-  </div>
+
+<a class="btn btn-secondary" href="#" role="button"style="background: #4ECCC6;">Ver costos iniciales</a>
+<a class="btn btn-secondary" href="#" role="button" style="background: #102D4A;">Ver costos finales</a>
+<a class="btn btn-secondary" href="#" role="button"style="background: #BB5B5B;">Recibos</a>
