--- a/src/app/components/emision/emision.component.html
+++ b/src/app/components/emision/emision.component.html
@@ -2,9 +2,10 @@
 <img src="../../../assets/trasfondo2.png" style="position: absolute; top: 300px; right:500px; width: 350px; height:350px">
 <img src="../../../assets/trasfondo2.png" style="position: absolute; top: 300px; left: 500px; width: 350px; height:350px">
 
+<a href="/tasa">
     <img src="../../../assets/logo.png" style="position:relative; width: 90px; height: 95px; right: -1200px; top: 280px;align-items:center;background: #FFFFFF;
             box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
-<a>
+
     <p style="left: 550px">Historial de</p>
     <p style="left: 550px; top: 555px;">carteras</p>
 </a>
