--- a/src/app/components/filter/filter.component.css
+++ b/src/app/components/filter/filter.component.css
@@ -1,4 +1,6 @@
-
+*{
+  color:white;
+}
 
 .col .card-body{
   background: #102D4A;
@@ -45,4 +47,16 @@ a {
   background: linear-gradient(90deg,#1B97B6,#4ECCC6,#B2E5FB);
   -webkit-background-clip: text;
   color: transparent;
+}
+
+.botones{
+  align-items: center;
+  text-align: center;
+}
+
+.botones .btn-primary{
+  background: #FFFFFF;
+  border-radius: 10px;
+  color: black;
+  width:100px;
 }
