--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -6,6 +6,7 @@
               <div>
                 <img src="../../../assets/nuevossoles.png" class="sombra-2" height="124" alt="">
               </div>
+              <br>
               <div class="card-body">
                 <br>
                 <a href="#" class="card-link text-reset">Soles</a>
@@ -18,13 +19,14 @@
             <div>
                 <img src="../../../assets/dollars.png" class="sombra-2" height="124" alt="">
             </div>
+            <br>
             <div class="card-body ">
                 <br>
                 <a href="#" class="card-link text-reset">Dólares</a>
             </div>
             </div>
         </div>
-        <div >
+        <div class="botones">
             <a class="btn btn-primary" href="/historial" role="button" style="width:100px">Regresar</a>
         </div>
     </div>
