--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -34,7 +34,7 @@
 <!-- Presentacion-->
 <section id="1" class="container-fluid">
   <div class="row">
-    <div class="col-5 container bg-primary p-5 pb-0">
+    <div class="col-5 container fondo p-5 pb-0">
       <div class="mb-5">
         <h1 class="font-weight-bold text-white">Finanzas e</h1>
         <h1 class="font-weight-bold text-danger">ingeniería</h1>
@@ -64,9 +64,9 @@
 <!-- Inicio de sesión-->
 <section class="container-fluid">
   <div class="row">
-    <div class="col-5 bg-secondary container p-5">
-      <h1 class="font-weight-bold">INICIO DE</h1>
-      <h1>SESIÓN</h1>
+    <div class="col-5 fondo-3 container p-5">
+      <h1 class="font-weight-bold color">INICIO DE</h1>
+      <h1 class="color">SESIÓN</h1>
     </div>
 
     <div class="col bg-white">
@@ -97,7 +97,7 @@
 </section>
 
 <!--    Introducción-->
-<section id="2" class="container-fluid bg-primary text-center text-white p-5">
+<section id="2" class="container-fluid fondo-2 text-center text-white p-5">
   <div class="container fw-bold">
     <h1 class="">Introducción</h1>
     <p class="p-5">
@@ -109,9 +109,9 @@
 </section>
 
 <!--    Nosotros-->
-<section id="3" class="container-fluid p-5 bg-secondary">
+<section id="3" class="container-fluid p-5 fondo-3">
   <div class="container">
-    <h1 class="font-weight-bold text-primary text-center">Nosotros</h1>
+    <h1 class="font-weight-bold text-center color">Nosotros</h1>
 
     <div class="row justify-content-around p-5">
       <div class="card text-white sombra box p-0">
