--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,12 +1,3 @@
-.input-w{
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    cursor: text;
-    padding: 8px 10px;
-    margin: .5rem 0;
-    transition: border .1s linear;
-}
 .fondo {
-  background-image: url("../../../assets/fondo.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: rgba(0, 48, 91, 0.8);
 }
