--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,11 +4,11 @@
 <section class="vh-100 fondo" style="background-color: #eee; margin:auto; height: 40vh">
   <div class="container vh-100" style="width: 650px">
     <div class="row d-flex justify-content-center align-items-center vh-100">
-      <div class="card text-black" style="border-radius: 25px">
+      <div class="card text-black">
         <div class="card-body" >
-          <div class="row justify-content-center" style="margin:0px">
+          <div class="row justify-content-center" style="margin:0px; height:70%">
 
-            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1" style="width:50%;">
 
               <!-- <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Ingresa a tu cuenta</p> -->
               <img src="../../../assets/logo.png" style="position:relative; width: 90px; height: 95px; left: 60px; top: -10px; align-items:center;background: #FFFFFF;
@@ -32,12 +32,12 @@
                   </div>
                 </div>
 
-                <div class="form-check d-flex justify-content-center mb-5">
-                  <p class="form-check-label">¿No tienes cuenta? <a href="/register" class="form-check-label">Registrate</a></p>
-                </div>
-
                 <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                   <button class="btn btn-primary btn-lg" [disabled]="!userForm.valid">Iniciar Sesión</button>
+                </div>
+
+                <div class="form-check d-flex justify-content-center mb-5">
+                  <a href="/register" class="form-check-label" style="color:black;"><strong>¿Olvidaste tu contraseña</strong></a>
                 </div>
 
               </form>
